SoDA/static/css/styles.css
* {
  margin: 0;
}
html, body {
  font-family: 'Roboto', 'Helvetica', sans-serif;
  margin: 0;
  padding: 0;
  height: 100%;
}
.soda .mdl-layout__header-row {
  padding-left: 40px;
  height: 53px;
}
.soda .mdl-layout.is-small-screen .mdl-layout__tab-bar-container {
  display: none;
}
.soda  .mdl-layout__header-row {
  padding-left: 60px;
}
.soda .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
  font-size: inherit;
}
.soda .mdl-layout:not(.is-small-screen) .mdl-layout__drawer-button {
  display: none;
}
.soda .mdl-card {
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
}
.soda .mdl-card > * {
  height: auto;
}
.soda .mdl-card .mdl-card__supporting-text {
  margin: 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  padding: 0;
  color: inherit;
  width: calc(100% - 80px);
}
.soda .mdl-card__actions {
  margin: 0;
  color: inherit;

}
.soda .mdl-card__actions a {
  color: #00BCD4;
  margin: 0;
}
.soda .mdl-card__actions a:hover,
.soda .mdl-card__actions a:active {
  color: inherit;
  background-color: transparent;
}
.soda .mdl-card__supporting-text + .mdl-card__actions {
  border-top: 1px solid rgba(0, 0, 0, 0.12);
}

.soda .mdl-layout__content section:not(:last-of-type) {
  position: relative;
  margin-bottom: 48px;
}
.soda section.section--center {
  max-width: 864px;
}

.soda section > header{
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
}
.soda section > header > .material-icons {
  font-size: 3rem;
}
.soda section > button {
  position: absolute;
  z-index: 99;
  top: 8px;
  right: 8px;
}
.soda section .section__circle {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
      -ms-flex-positive: 0;
          flex-grow: 0;
  -webkit-flex-shrink: 1;
      -ms-flex-negative: 1;
          flex-shrink: 1;
}
.soda section .section__text {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  -webkit-flex-shrink: 0;
      -ms-flex-negative: 0;
          flex-shrink: 0;
  padding-top: 8px;
}
.soda section .section__text h5 {
  font-size: inherit;
  margin: 0;
  margin-bottom: 0.5em;
}
.soda section .section__text a {
  text-decoration: none;
}
.soda section .section__circle-container > .section__circle-container__circle {
  width: 64px;
  height: 64px;
  border-radius: 32px;
  margin: 8px 0;
}
.soda section.section--footer .section__circle--big {
  width: 100px;
  height: 100px;
  border-radius: 50px;
  margin: 8px 32px;
}
.soda .is-small-screen section.section--footer .section__circle--big {
  width: 50px;
  height: 50px;
  border-radius: 25px;
  margin: 8px 16px;
}
.soda section.section--footer {
  padding: 64px 0;
  margin: 0 -8px -8px -8px;
}
.soda section.section--center .section__text:not(:last-child) {
  border-bottom: 1px solid rgba(0,0,0,.13);
}
.soda .mdl-menu__container {
  z-index: 99;
}
.soda .hideMe {
  display: none;
}
.soda .showMe {
  max-height: 100%;
}
.soda .card {
  position: relative;
}

.soda .dontShow {
  display: none;
}
.soda .hidewrapper {
  position: relative;
}

.material-icons.md-18 { 
  font-size: 18px; 
}
.material-icons.md-24 { 
  font-size: 24px; 
}
.material-icons.md-36 { 
  font-size: 36px; 
}
.material-icons.md-48 { 
  font-size: 48px; 
}
.material-icons .color {
  color: blue;
}
.soda .mdl-card__media {
  height: 486px;
  background-size: 100% 100%;
  background-repeat: no-repeat;
}
.soda .mdl-card__title .mdl-card__subtitle-text {
  margin-left: 5px;
}
.soda .section__circle-container .material-icons {
  position: relative;
  left: 20px;
 }
.soda .mdl-card__actions .expand-button{
  float: right;
}

.soda .pusher {
  min-height: 100%;
  margin-bottom: -30px;
}

.soda .pusher:after {
  content: "";
  display: block;
}
.soda .mdl-mini-footer, .pusher:after {
  height: 30px;
}

